<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Freestlye</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Welcome To The Amazing App</string>
    <string name="line_1_text">Do You Really</string>
    <string name="line_2_text">Want To Play</string>

    <array name="favorite_shows">"Shameless", "Game Of Thrones", "Suits", "Fresh Prince",
        "Two And A Half Men", "Breaking Bad", "Martin", "H", "Dave Chapelle Show", "House"}</array>

    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="exit_line_text_1">Are You</string>
    <string name="exit_line_text_2">Sure!?!</string>
    <string name="exit_yes_button_text">Get Me Outta Here</string>
    <string name="exit_no_button_text">You Right, Take Me Back</string>
    <string name="exit_page">Exit</string>
    <string name="title_activity_game_screen">GameScreenActivity</string>
    <string name="mathDisplayText"> Enter Problems </string>
    <string name="answerDisplayText">Solution</string>
    <string name="enterAnswerText"/>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="del">Del</string>
    <string name="zero">0</string>
    <string name="ent">Ent</string>

</resources>
