<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_line_text_1"
        android:id="@+id/exit_line_id_1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_line_text_2"
        android:id="@+id/exit_line_id_2"
        android:gravity="center"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom">



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exit_yes_button_id"
            android:text="@string/exit_yes_button_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exit_no_button_id"
            android:text="@string/exit_no_button_text"/>

    </LinearLayout>






</LinearLayout>