<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context=".HomepageActivity"
                android:weightSum="1">



     <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/welcome"
       android:text="@string/welcome_text"
       android:layout_gravity="center"
       android:textStyle="bold"

        />


    <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/line_1"
            android:text="@string/line_1_text"
            android:gravity="center|bottom"
            android:textStyle="bold"

            />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/line_2"
        android:text="@string/line_2_text"
        android:gravity="center|bottom"
        android:textStyle="bold"

        />


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5"/>

         <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingLeft="20dp"
           android:paddingRight="20dp"
           android:paddingBottom="20dp"
           android:paddingTop="20dp"
           android:id="@+id/yes_button"
           android:text="@string/yes_button"
           android:onClick="yesButtonClick"

           />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.4"/>

         <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/no_button"
            android:text="@string/no_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:onClick="noButtonClick"
        />






</LinearLayout>



